<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".UpdateTaskActivity">

    <android.support.v7.widget.CardView
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="75dp"
        app:cardElevation="12dp"
        android:foregroundGravity="center"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="24dp">

            <EditText
                android:textColorHint="@color/colorAccent"
                android:hint="Title"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceLarge"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_gravity="center"
                android:layout_height="56dp" />

            <Button
                android:id="@+id/save_button"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:text="Save"
                android:layout_gravity="end"
                android:background="@drawable/selecting"
                android:textColor="@color/textColor"
                android:layout_marginRight="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"/>

            <EditText
                android:id="@+id/edit_write"
                android:gravity="top|start"
                android:hint="@string/today_event"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minLines="5"
                android:textColorLink="#5a81ab"
                android:textAllCaps="false"
                android:lineSpacingExtra="1dp"
                android:scrollbars="vertical"
                android:paddingBottom="40dp"
                android:inputType="textMultiLine"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>


