<resources>
    <string name="app_name">Journal App</string>

    <string name="front_name">Journal</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Add</string>
    <string name="title_log_out">Log Out</string>
    <string name="cloud_doc">Cloud DOC</string>


    <string name="journal_title">Title</string>

    <string name="loading">Loading</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>

    <string name="update_button">Update</string>
    <string name="today_event">What Happened today?</string>
    <string name="update">Update</string>
    <string name="start_your_journey">Start Your Journey</string>
    <string name="push_to_cloud">Push to cloud</string>
    <string name="delete_in_popup">Delete</string>
    
    <string name="cloud_title">CLOUD DOCUMENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="options_content_descriptions">OPTIONS</string>

</resources>
