<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_journal"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/cloud"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/cloud_doc" />

    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_keyboard_return_black_24dp"
        android:title="@string/title_log_out" />

</menu>
